fixed background overflow scroll

--- a/main.css
+++ b/main.css
@@ -2,15 +2,18 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: 'Quicksand', sans-serif;
+	position: relative;
 }
 
 .container {
 	position: fixed;
+	overflow-y: scroll;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 	padding: 0;
 	margin: 0;
     bottom: 0;
+    top: 0;
 	background: url(./img/background.jpg) center center no-repeat; /*Photo by Luca Bravo on Unsplash*/
 	background-attachment: fixed;
 	-webkit-background-size: cover;
